test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-owned-from-oknil-borrowed.good
init-field-dflt-oknil-owned-from-oknil-borrowed.chpl:8: error: Cannot initialize 'lhs' of type owned MyClass? from a 'borrowed MyClass?'
